--- a/qpv.bib
+++ b/qpv.bib
@@ -222,3 +222,17 @@
   eprint        = {1904.04371},
   archiveprefix = {arxiv}
 }
+
+@inproceedings{Unruh2019,
+  title         = {Quantum {{Hoare Logic}} with {{Ghost Variables}}},
+  author        = {Unruh, Dominique},
+  year          = {2019},
+  month         = jun,
+  booktitle     = {2019 34th {{Annual ACM}}/{{IEEE Symposium}} on {{Logic}} in {{Computer Science}}},
+  series        = {{{LICS}} '19},
+  pages         = {1--13},
+  doi           = {10.1109/LICS.2019.8785779},
+  archiveprefix = {arxiv},
+  eprint        = {1902.00325},
+  abstract      = {Quantum Hoare logic allows us to reason about quantum programs. We present an extension of quantum Hoare logic that introduces ``ghost variables'' to extend the expressive power of pre-/postconditions. Ghost variables are variables that do not actually occur in the program and are allowed to have arbitrary quantum states (in a sense, they are existentially quantified), and be entangled with program variables. Ghost variables allow us to express properties such as the distribution of a program variable or the fact that a variable has classical content. And as a case study, we show how quantum Hoare logic with ghost variables can be used to prove the security of the quantum one-time pad.}
+}
