--- a/bbt.bib
+++ b/bbt.bib
@@ -31,7 +31,7 @@
   author        = {Altenkirch, Thorsten and Grattage, Jonathan},
   year          = {2005},
   month         = jun,
-  booktitle     = {Proceedings of the Twentieth Annual {{IEEE}} Symposium on Logic in Computer Science},
+  booktitle     = {Proceedings of the 20th Annual {{IEEE}} Symposium on Logic in Computer Science},
   publisher     = {{IEEE Computer Society Press}},
   address       = {{Chicago, USA}},
   series        = {{{LICS}} '05},
@@ -1032,7 +1032,7 @@
   author        = {Unruh, Dominique},
   year          = {2019},
   month         = jun,
-  booktitle     = {2019 34th {{Annual ACM}}/{{IEEE Symposium}} on {{Logic}} in {{Computer Science}}},
+  booktitle     = {Proceedings of the 34th {{Annual ACM}}/{{IEEE Symposium}} on {{Logic}} in {{Computer Science}}},
   series        = {{{LICS}} '19},
   pages         = {1--13},
   doi           = {10.1109/LICS.2019.8785779},
