--- a/bbt.bib
+++ b/bbt.bib
@@ -1157,4 +1157,18 @@
   timestamp = {2021-04-18}
 }
 
+@inproceedings{Zhou2021,
+  title     = {A Quantum Interpretation of Bunched Logic & Quantum Separation Logic},
+  author    = {Zhou, Li and Barthe, Gilles and Hsu, Justin and Ying, Mingsheng and Yu, Nengkun},
+  year      = {2021},
+  month     = {jul},
+  booktitle = {Proceedings of the 36th Annual ACM/IEEE Symposium on Logic in Computer Science},
+  series    = {{{LICS}} '21},
+  publisher = {IEEE Computer Society},
+  address   = {Los Alamitos, CA, USA},
+  pages     = {1--14},
+  doi       = {10.1109/LICS52264.2021.9470673},
+  abstract  = {We propose a model of the substructural logic of Bunched Implications (BI) that is suitable for reasoning about quantum states. In our model, the separating conjunction of BI describes separable quantum states. We develop a program logic where pre- and post-conditions are BI formulas describing quantum states—the program logic can be seen as a counterpart of separation logic for imperative quantum programs. We exercise the logic for proving the security of quantum one-time pad and secret sharing, and we show how the program logic can be used to discover a flaw in Google Cirq’s tutorial on the Variational Quantum Algorithm (VQA).}
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
