--- a/bbt.bib
+++ b/bbt.bib
@@ -1161,7 +1161,7 @@
   title     = {A Quantum Interpretation of Bunched Logic & Quantum Separation Logic},
   author    = {Zhou, Li and Barthe, Gilles and Hsu, Justin and Ying, Mingsheng and Yu, Nengkun},
   year      = {2021},
-  month     = {jul},
+  month     = jul,
   booktitle = {Proceedings of the 36th Annual ACM/IEEE Symposium on Logic in Computer Science},
   series    = {{{LICS}} '21},
   publisher = {IEEE Computer Society},
