--- a/bbt.bib
+++ b/bbt.bib
@@ -498,18 +498,6 @@
   timestamp     = {2021-04-18}
 }
 
-@unpublished{Hietala2020,
-  title         = {Proving {{Quantum Programs Correct}}},
-  author        = {Hietala, Kesha and Rand, Robert and Hung, Shih-Han and Li, Liyi and Hicks, Michael},
-  year          = {2020},
-  month         = oct,
-  archiveprefix = {arxiv},
-  eprint        = {2010.01240},
-  abstract      = {As quantum computing steadily progresses from theory to practice, programmers are faced with a common problem: How can they be sure that their code does what they intend it to do? This paper presents encouraging results in the application of mechanized proof to the domain of quantum programming in the context of the SQIR development. It verifies the correctness of a range of a quantum algorithms including Simon's algorithm, Grover's algorithm, and quantum phase estimation, a key component of Shor's algorithm. In doing so, it aims to highlight both the successes and challenges of formal verification in the quantum context and motivate the theorem proving community to target quantum computing as an application domain.},
-  note          = {In submission},
-  timestamp     = {2021-04-18}
-}
-
 @article{Hietala2021,
   title     = {A Verified Optimizer for {{Quantum}} Circuits},
   author    = {Hietala, Kesha and Rand, Robert and Hung, Shih-Han and Wu, Xiaodi and Hicks, Michael},
@@ -522,6 +510,23 @@
   doi       = {10.1145/3434318},
   abstract  = {We present VOQC, the first fully verified optimizer for quantum circuits, written using the Coq proof assistant. Quantum circuits are expressed as programs in a simple, low-level language called SQIR, a simple quantum intermediate representation, which is deeply embedded in Coq. Optimizations and other transformations are expressed as Coq functions, which are proved correct with respect to a semantics of SQIR programs. SQIR uses a semantics of matrices of complex numbers, which is the standard for quantum computation, but treats matrices symbolically in order to reason about programs that use an arbitrary number of quantum bits. SQIR's careful design and our provided automation make it possible to write and verify a broad range of optimizations in VOQC, including full-circuit transformations from cutting-edge optimizers.},
   timestamp = {2021-04-18}
+}
+
+@inproceedings{Hietala2021a,
+  title     = {{Proving Quantum Programs Correct}},
+  author    = {Hietala, Kesha and Rand, Robert and Hung, Shih-Han and Li, Liyi and Hicks, Michael},
+  year      = {2021},
+  month     = jun,
+  booktitle = {12th International Conference on Interactive Theorem Proving (ITP 2021)},
+  editor    = {Cohen, Liron and Kaliszyk, Cezary},
+  publisher = {Schloss Dagstuhl -- Leibniz-Zentrum f{\"u}r Informatik},
+  address   = {Dagstuhl, Germany},
+  series    = {Leibniz International Proceedings in Informatics (LIPIcs)},
+  volume    = {193},
+  pages     = {21:1--21:19},
+  doi       = {10.4230/LIPIcs.ITP.2021.21},
+  url       = {https://github.com/inQWIRE/SQIR},
+  abstract  = {As quantum computing progresses steadily from theory into practice, programmers will face a common problem: How can they be sure that their code does what they intend it to do? This paper presents encouraging results in the application of mechanized proof to the domain of quantum programming in the context of the SQIR development. It verifies the correctness of a range of a quantum algorithms including Grover’s algorithm and quantum phase estimation, a key component of Shor’s algorithm. In doing so, it aims to highlight both the successes and challenges of formal verification in the quantum context and motivate the theorem proving community to target quantum computing as an application domain.}
 }
 
 @techreport{JavadiAbhari2012,
