Normalize series entry for Springer volumes

--- a/bbt.bib
+++ b/bbt.bib
@@ -197,11 +197,12 @@
   author    = {Chareton, Christophe and Bardin, S{\'e}bastien and Bobot, Fran{\c c}ois and Perrelle, Valentin and Valiron, Beno{\^i}t},
   year      = {2021},
   month     = mar,
-  booktitle = {Programming Languages and Systems},
+  booktitle = {Programming Languages and Systems, {{ESOP}} 2021},
   editor    = {Yoshida, Nobuko},
   publisher = {{Springer International Publishing}},
   address   = {{Cham}},
-  series    = {{{ESOP}} '21},
+  series    = {Lecture Notes in Computer Science},
+  volume    = {12648},
   pages     = {148--177},
   doi       = {10.1007/978-3-030-72019-3_6},
   abstract  = {While recent progress in quantum hardware open the door for significant speedup in certain key areas, quantum algorithms are still hard to implement right, and the validation of such quantum programs is a challenge. In this paper we propose Qbricks, a formal verification environment for circuit-building quantum programs, featuring both parametric specifications and a high degree of proof automation. We propose a logical framework based on first-order logic, and develop the main tool we rely upon for achieving the automation of proofs of quantum specification: PPS, a parametric extension of the recently developed path sum semantics. To back-up our claims, we implement and verify parametric versions of several famous and non-trivial quantum algorithms, including the quantum parts of Shor's integer factoring, quantum phase estimation (QPE) and Grover's search.},
@@ -897,10 +898,12 @@
   author    = {Sabry, Amr and Valiron, Beno{\^i}t and Vizzotto, Juliana Kaizer},
   year      = {2018},
   month     = apr,
-  booktitle = {Foundations of Software Science and Computation Structures},
+  booktitle = {Foundations of Software Science and Computation Structures, FoSSaCS 2018},
   editor    = {Baier, Christel and Dal Lago, Ugo},
   publisher = {{Springer International Publishing}},
   address   = {{Cham}},
+  series    = {Lecture Notes in Computer Science},
+  volume    = {10803},
   pages     = {348--364},
   doi       = {10.1007/978-3-319-89366-2_19},
   abstract  = {One perspective on quantum algorithms is that they are classical algorithms having access to a special kind of memory with exotic properties. This perspective suggests that, even in the case of quantum algorithms, the control flow notions of sequencing, conditionals, loops, and recursion are entirely classical. There is however, another notion of control flow, that is itself quantum. The notion of quantum conditional expression is reasonably well-understood: the execution of the two expressions becomes itself a superposition of executions. The quantum counterpart of loops and recursion is however not believed to be meaningful in its most general form.},
