Normalize QPL booktitles

--- a/bbt.bib
+++ b/bbt.bib
@@ -67,7 +67,7 @@
   author    = {Amy, Matthew},
   year      = {2019},
   month     = jan,
-  booktitle = {Proceedings of the 15th International Conference on Quantum Physics and Logic (QPL), Halifax, Canada, 3--7th June 2018},
+  booktitle = {Proceedings of the 15th International Conference on Quantum Physics and Logic (QPL), Halifax, Canada, June 3--7, 2018},
   editor    = {Selinger, Peter and Chiribella, Giulio},
   publisher = {{Open Publishing Association}},
   series    = {Electronic Proceedings in Theoretical Computer Science},
@@ -788,7 +788,7 @@
   author    = {Rand, Robert and Paykin, Jennifer and Zdancewic, Steve},
   year      = {2018},
   month     = feb,
-  booktitle = {Proceedings 14th International Conference on Quantum Physics and Logic (QPL), Nijmegen, the Netherlands, 3--7 July 2017},
+  booktitle = {Proceedings of the 14th International Conference on Quantum Physics and Logic (QPL), Nijmegen, the Netherlands, July 3--7, 2017},
   editor    = {Coecke, Bob and Kissinger, Aleks},
   publisher = {{Open Publishing Association}},
   series    = {Electronic Proceedings in Theoretical Computer Science},
@@ -838,7 +838,7 @@
   author     = {Rand, Robert and Paykin, Jennifer and Lee, Dong-Ho and Zdancewic, Steve},
   year       = {2019},
   month      = jan,
-  booktitle  = {Proceedings of the 15th International Conference on Quantum Physics and Logic (QPL), Halifax, Canada, 3--7th June 2018},
+  booktitle  = {Proceedings of the 15th International Conference on Quantum Physics and Logic (QPL), Halifax, Canada, June 3--7, 2018},
   editor     = {Selinger, Peter and Chiribella, Giulio},
   publisher  = {Open Publishing Association},
   series     = {Electronic Proceedings in Theoretical Computer Science},
@@ -869,7 +869,7 @@
   author    = {Rios, Francisco and Selinger, Peter},
   year      = {2018},
   month     = feb,
-  booktitle = {Proceedings 14th International Conference on Quantum Physics and Logic (QPL), Nijmegen, the Netherlands, 3--7 July 2017},
+  booktitle = {Proceedings of the 14th International Conference on Quantum Physics and Logic (QPL), Nijmegen, the Netherlands, July 3--7, 2017},
   editor    = {Coecke, Bob and Kissinger, Aleks},
   publisher = {{Open Publishing Association}},
   series    = {Electronic Proceedings in Theoretical Computer Science},
