Add Gottesman types paper with partial info

--- a/bbt.bib
+++ b/bbt.bib
@@ -849,6 +849,22 @@
   timestamp  = {2021-04-18}
 }
 
+@inproceedings{Rand2020,
+  title     = {Gottesman Types for Quantum Programs},
+  author    = {Rand, Robert and Sundaram, Aarthi and Singhal, Kartik and Lackey, Brad},
+  year      = {2020},
+  month     = jun,
+  booktitle = {Proceedings of the 17th International Conference on Quantum Physics and Logic (QPL), Paris, France, June 2--6, 2020},
+  editor    = {Valiron, Beno{\^i}t and Mansfield, Shane and Arrighi, Pablo and Panangaden, Prakash},
+  publisher = {{Open Publishing Association}},
+  series    = {Electronic Proceedings in Theoretical Computer Science},
+  novolume  = {},
+  pages     = {265--276},
+  nodoi     = {},
+  url       = {https://people.cs.uchicago.edu/~rand/qpl_2020.pdf},
+  abstract  = {The Heisenberg representation of quantum operators provides a powerful technique for reasoning about quantum circuits, albeit those restricted to the common (non-universal) Clifford set H, S and CNOT. The Gottesman-Knill theorem showed that we can use this representation to efficiently simulate Clifford circuits. We show that Gottesman's semantics for quantum programs can be treated as a type system, allowing us to efficiently characterize a common subset of quantum programs. We also show that it can be extended beyond the Clifford set to partially characterize a broad range of programs. We apply these types to reason about separable states and the superdense coding algorithm.}
+}
+
 @inproceedings{Rennela2018,
   title     = {Classical {{Control}} and {{Quantum Circuits}} in {{Enriched Category Theory}}},
   author    = {Rennela, Mathys and Staton, Sam},
