Add PDF and arXiv links

--- a/bbt.bib
+++ b/bbt.bib
@@ -599,6 +599,8 @@
   series     = {{{LICS}} '18},
   pages      = {659--668},
   doi        = {10.1145/3209108.3209196},
+  archiveprefix = {arxiv},
+  eprint        = {1804.09822},
   abstract   = {Linear/non-linear (LNL) models, as described by Benton, soundly model a LNL term calculus and LNL logic closely related to intuitionistic linear logic. Every such model induces a canonical enrichment that we show soundly models a LNL lambda calculus for string diagrams, introduced by Rios and Selinger (with primary application in quantum computing). Our abstract treatment of this language leads to simpler concrete models compared to those presented so far. We also extend the language with general recursion and prove soundness. Finally, we present an adequacy result for the diagram-free fragment of the language which corresponds to a modified version of Benton and Wadler's adjoint calculus with recursion.},
   timestamp  = {2021-04-18}
 }
@@ -630,6 +632,8 @@
   number    = {4},
   pages     = {967--1002},
   doi       = {10.1007/s10817-019-09527-x},
+  archiveprefix = {arxiv},
+  eprint        = {1812.03624},
   abstract  = {We develop a linear logical framework within the Hybrid system and use it to reason about the type system of a quantum lambda calculus. In particular, we consider a practical version of the calculus called Proto-Quipper, which contains the core of Quipper. Quipper is a quantum programming language under active development and recently has gained much popularity among the quantum computing communities. Hybrid is a system that is designed to support the use of higher-order abstract syntax for representing and reasoning about formal systems implemented in the Coq Proof Assistant. In this work, we extend the system with a linear specification logic (SL) in order to reason about the linear type system of Quipper. To this end, we formalize the semantics of Proto-Quipper by encoding the typing and evaluation rules in the SL, and prove type soundness.},
   timestamp = {2021-04-18}
 }
@@ -716,6 +720,8 @@
   number     = {4},
   pages      = {941--966},
   doi        = {10.1007/s10817-019-09518-y},
+  archiveprefix = {arxiv},
+  eprint        = {1809.05723},
   abstract   = {qPCF is a paradigmatic quantum programming language that extends PCF with quantum circuits and a quantum co-processor. Quantum circuits are treated as classical data that can be duplicated and manipulated in flexible ways by means of a dependent type system. The co-processor is essentially a standard QRAM device, albeit we avoid to store permanently quantum states in between two co-processor's calls. Despite its quantum features, qPCF retains the classic programming approach of PCF. We introduce qPCF syntax, typing rules, and its operational semantics. We prove fundamental syntactic properties of the system. Moreover, we provide some higher-order examples of circuit encoding.},
   timestamp  = {2021-04-18}
 }
@@ -1134,6 +1140,7 @@
   number    = {6},
   pages     = {19:1--19:49},
   doi       = {10.1145/2049706.2049708},
+  url       = {https://www.researchgate.net/profile/Mingsheng-Ying/publication/220404530_Floyd-Hoare_Logic_for_Quantum_Programs/links/540cbbff0cf2d8daaacaeb3d/Floyd-Hoare-Logic-for-Quantum-Programs.pdf},
   abstract  = {Floyd--Hoare logic is a foundation of axiomatic semantics of classical programs, and it provides effective proof techniques for reasoning about correctness of classical programs. To offer similar techniques for quantum program verification and to build a logical foundation of programming methodology for quantum computers, we develop a full-fledged Floyd--Hoare logic for both partial and total correctness of quantum programs. It is proved that this logic is (relatively) complete by exploiting the power of weakest preconditions and weakest liberal preconditions for quantum programs.},
   timestamp = {2021-04-18}
 }
@@ -1194,6 +1201,7 @@
   pages     = {542--558},
   numpages  = {17},
   doi       = {10.1145/3453483.3454061},
+  url       = {http://web.cs.ucla.edu/~palsberg/paper/pldi21-quantum.pdf},
   abstract  = {In quantum computing, the basic unit of information is a qubit. Simulation of a general
 quantum program takes exponential time in the number of qubits, which makes simulation
 infeasible beyond 50 qubits on current supercomputers. So, for the understanding of
@@ -1217,6 +1225,7 @@ with 300 qubits.}
   series    = {{{PLDI}} '19},
   pages     = {1149--1162},
   doi       = {10.1145/3314221.3314584},
+  url       = {https://opus.lib.uts.edu.au/bitstream/10453/140615/2/3314221.3314584.pdf},
   abstract  = {We derive a variant of quantum Hoare logic (QHL), called applied quantum Hoare logic (aQHL for short), by: 1. restricting QHL to a special class of preconditions and postconditions, namely projections, which can significantly simplify verification of quantum programs and are much more convenient when used in debugging and testing; and 2. adding several rules for reasoning about robustness of quantum programs, i.e. error bounds of outputs. The effectiveness of aQHL is shown by its applications to verify two sophisticated quantum algorithms: HHL (Harrow-Hassidim-Lloyd) for solving systems of linear equations and qPCA (quantum Principal Component Analysis).},
   timestamp = {2021-04-18}
 }
@@ -1232,6 +1241,8 @@ with 300 qubits.}
   address   = {Los Alamitos, CA, USA},
   pages     = {1--14},
   doi       = {10.1109/LICS52264.2021.9470673},
+  archiveprefix = {arxiv},
+  eprint        = {2102.00329},
   abstract  = {We propose a model of the substructural logic of Bunched Implications (BI) that is suitable for reasoning about quantum states. In our model, the separating conjunction of BI describes separable quantum states. We develop a program logic where pre- and post-conditions are BI formulas describing quantum states---the program logic can be seen as a counterpart of separation logic for imperative quantum programs. We exercise the logic for proving the security of quantum one-time pad and secret sharing, and we show how the program logic can be used to discover a flaw in Google Cirq's tutorial on the Variational Quantum Algorithm (VQA).}
 }
 
