--- a/bbt.bib
+++ b/bbt.bib
@@ -827,15 +827,14 @@
 }
 
 @misc{Rand2018b,
-  title     = {Phantom {{Types}} for {{Quantum Programs}}},
-  author    = {Rand, Robert and Paykin, Jennifer and Zdancewic, Steve},
-  year      = {2018},
-  month     = jan,
-  numpages  = {2},
-  url       = {https://popl18.sigplan.org/event/coqpl-2018-phantom-types-for-quantum-programs},
-  abstract  = {We explore the design space of using dependent types to type check and verify quantum circuits. We weigh the trade-offs between the expressivity of dependent types against the costs imposed by large proof terms. We propose lightweight dependent types, or phantom types, as a middle ground, which provide useful type information for programming while specifying the properties to be externally verified.},
-  note      = {Talk at The Fourth International Workshop on Coq for Programming Languages (CoqPL '18)},
-  timestamp = {2021-04-18}
+  title        = {Phantom {{Types}} for {{Quantum Programs}}},
+  author       = {Rand, Robert and Paykin, Jennifer and Zdancewic, Steve},
+  year         = {2018},
+  month        = jan,
+  howpublished = {The Fourth International Workshop on Coq for Programming Languages (CoqPL '18)},
+  url          = {https://popl18.sigplan.org/event/coqpl-2018-phantom-types-for-quantum-programs},
+  abstract     = {We explore the design space of using dependent types to type check and verify quantum circuits. We weigh the trade-offs between the expressivity of dependent types against the costs imposed by large proof terms. We propose lightweight dependent types, or phantom types, as a middle ground, which provide useful type information for programming while specifying the properties to be externally verified.},
+  timestamp    = {2021-07-16}
 }
 
 @inproceedings{Rand2019,
@@ -1009,6 +1008,16 @@
   url       = {https://www.mscs.dal.ca/~selinger/papers/qlambdabook.pdf},
   abstract  = {We discuss the design of a typed lambda calculus for quantum computation. After a brief discussion of the role of higher-order functions in quantum information theory, we define the quantum lambda calculus and its operational semantics. Safety invariants, such as the no-cloning property, are enforced by a static type system that is based on intuitionistic linear logic. We also describe a type inference algorithm, and a categorical semantics.},
   timestamp = {2021-04-18}
+}
+
+@misc{Singhal2020,
+  title        = {Verified translation between low-level quantum languages},
+  author       = {Singhal, Kartik and Rand, Robert and Hicks, Michael},
+  year         = {2020},
+  month        = jan,
+  howpublished = {The First International Workshop on Programming Languages for Quantum Computing (PLanQC '20)},
+  url          = {http://ks.cs.uchicago.edu/publication/verified-translation/},
+  abstract     = {We describe the ongoing development of a verified translator between OpenQASM (Open Quantum Assembly Language) and sqir, a Small Quantum Intermediate Representation used for circuit optimization. Verified translation from and to OpenQASM will allow verified optimization of circuits written in a variety of tools and executed on real quantum computers. This translator is a step toward a verified compilation stack for quantum computing.}
 }
 
 @misc{Smith2016,
