publisher unneeded for journals, normalize @article entries

--- a/bbt.bib
+++ b/bbt.bib
@@ -168,7 +168,6 @@
   year         = {2009},
   month        = jan,
   journal      = {Nature Physics},
-  publisher    = {{Nature Publishing Group}},
   volume       = {5},
   number       = {1},
   pages        = {19--26},
@@ -377,6 +376,7 @@
   journal  = {Mathematical Structures in Computer Science},
   volume   = {16},
   number   = {4},
+  pages    = {581--600},
   doi      = {10.1017/S0960129506005378},
   url      = {http://www.dcs.gla.ac.uk/~simon/quantum/},
   abstract = {The field of quantum programming languages is developing rapidly and there is a surprisingly large literature. Research in this area includes the design of programming languages for quantum computing, the application of established semantic and logical techniques to the foundations of quantum mechanics, and the design of compilers for quantum programming languages. This article justifies the study of quantum programming languages, presents the basics of quantum computing, surveys the literature in quantum programming languages, and indicates directions for future research.}
@@ -474,7 +474,6 @@
   year      = {2020},
   month     = dec,
   journal   = {Nature Reviews Physics},
-  publisher = {{Nature Publishing Group}},
   volume    = {2},
   number    = {12},
   pages     = {709--722},
@@ -506,7 +505,8 @@
   journal   = {Proceedings of the ACM on Programming Languages},
   volume    = {5},
   number    = {POPL},
-  pages     = {37:1--37:29},
+  pages     = {37},
+  numpages  = {29},
   doi       = {10.1145/3434318},
   abstract  = {We present VOQC, the first fully verified optimizer for quantum circuits, written using the Coq proof assistant. Quantum circuits are expressed as programs in a simple, low-level language called SQIR, a simple quantum intermediate representation, which is deeply embedded in Coq. Optimizations and other transformations are expressed as Coq functions, which are proved correct with respect to a semantics of SQIR programs. SQIR uses a semantics of matrices of complex numbers, which is the standard for quantum computation, but treats matrices symbolically in order to reason about programs that use an arbitrary number of quantum bits. SQIR's careful design and our provided automation make it possible to write and verify a broad range of optimizations in VOQC, including full-circuit transformations from cutting-edge optimizers.},
   timestamp = {2021-04-18}
@@ -579,7 +579,6 @@
   year      = {2019},
   month     = mar,
   journal   = {Quantum},
-  publisher = {{Verein zur F\"orderung des Open Access Publizierens in den Quantenwissenschaften}},
   volume    = {3},
   pages     = {130},
   doi       = {10.22331/q-2019-03-25-130},
@@ -968,7 +967,6 @@
   year      = {2004},
   month     = aug,
   journal   = {Mathematical Structures in Computer Science},
-  publisher = {{Cambridge University Press}},
   volume    = {14},
   number    = {4},
   pages     = {527--586},
@@ -1040,7 +1038,6 @@
   year       = {2018},
   month      = jan,
   journal    = {Quantum},
-  publisher  = {{Verein zur F\"orderung des Open Access Publizierens in den Quantenwissenschaften}},
   volume     = {2},
   pages      = {49},
   doi        = {10.22331/q-2018-01-31-49},
@@ -1075,7 +1072,8 @@
   journal   = {Proceedings of the ACM on Programming Languages},
   volume    = {3},
   number    = {POPL},
-  pages     = {33:1--33:31},
+  pages     = {33},
+  numpages  = {31},
   doi       = {10.1145/3290346},
   abstract  = {We present a logic for reasoning about pairs of interactive quantum programs -- quantum relational Hoare logic (qRHL). This logic follows the spirit of probabilistic relational Hoare logic (Barthe et al. 2009) and allows us to formulate how the outputs of two quantum programs relate given the relationship of their inputs. Probabilistic RHL was used extensively for computer-verified security proofs of classical cryptographic protocols. Since pRHL is not suitable for analyzing quantum cryptography, we present qRHL as a replacement, suitable for the security analysis of post-quantum cryptography and quantum protocols. The design of qRHL poses some challenges unique to the quantum setting, e.g., the definition of equality on quantum registers. Finally, we implemented a tool for verifying proofs in qRHL and developed several example security proofs in it.},
   timestamp = {2021-04-18}
@@ -1102,7 +1100,6 @@
   year      = {2015},
   month     = jul,
   journal   = {Communications of the ACM},
-  publisher = {{Association for Computing Machinery}},
   volume    = {58},
   number    = {8},
   pages     = {52--61},
