--- a/bbt.bib
+++ b/bbt.bib
@@ -586,6 +586,34 @@
   timestamp = {2021-04-18}
 }
 
+@article{Li2020,
+  title    = {Projection-Based Runtime Assertions for Testing and Debugging Quantum Programs},
+  author   = {Li, Gushu and Zhou, Li and Yu, Nengkun and Ding, Yufei and Ying, Mingsheng and Xie, Yuan},
+  year     = {2020},
+  month    = nov,
+  journal  = {Proceedings of the ACM on Programming Languages},
+  volume   = {4},
+  number   = {OOPSLA},
+  pages    = {150},
+  numpages = {29},
+  doi      = {10.1145/3428218},
+  abstract = {In this paper, we propose Proq, a runtime assertion scheme for testing and debugging
+quantum programs on a quantum computer. The predicates in Proq are represented by
+projections (or equivalently, closed subspaces of the state space), following Birkhoff-von
+Neumann quantum logic. The satisfaction of a projection by a quantum state can be
+directly checked upon a small number of projective measurements rather than a large
+number of repeated executions. On the theory side, we rigorously prove that checking
+projection-based assertions can help locate bugs or statistically assure that the
+semantic function of the tested program is close to what we expect, for both exact
+and approximate quantum programs. On the practice side, we consider hardware constraints
+and introduce several techniques to transform the assertions, making them directly
+executable on the measurement-restricted quantum computers. We also propose to achieve
+simplified assertion implementation using local projection technique with soundness
+guaranteed. We compare Proq with existing quantum program assertions and demonstrate
+the effectiveness and efficiency of Proq by its applications to assert two sophisticated
+quantum algorithms, the Harrow-Hassidim-Lloyd algorithm and Shor's algorithm.}
+}
+
 @inproceedings{Lindenhovius2018,
   title         = {Enriching a {{Linear}}/{{Non}}-Linear {{Lambda Calculus}}: {{A Programming Language}} for {{String Diagrams}}},
   shorttitle    = {Enriching a {{Linear}}/{{Non}}-Linear {{Lambda Calculus}}},
