Add early version of Ying's TOPLAS12 paper

--- a/bbt.bib
+++ b/bbt.bib
@@ -1165,6 +1165,16 @@ quantum algorithms, the Harrow-Hassidim-Lloyd algorithm and Shor's algorithm.}
   timestamp = {2021-04-18}
 }
 
+@misc{Ying2009a,
+  title         = {Hoare Logic for Quantum Programs},
+  author        = {Mingsheng Ying},
+  year          = {2009},
+  archiveprefix = {arXiv},
+  eprint        = {0906.4586},
+  abstract      = {Hoare logic is a foundation of axiomatic semantics of classical programs and it provides effective proof techniques for reasoning about correctness of classical programs. To offer similar techniques for quantum program verification and to build a logical foundation of programming methodology for quantum computers, we develop a full-fledged Hoare logic for both partial and total correctness of quantum programs. It is proved that this logic is (relatively) complete by exploiting the power of weakest preconditions and weakest liberal preconditions for quantum programs.},
+  note          = {Early version of \cite{Ying2012}}
+}
+
 @article{Ying2012,
   title     = {Floyd--Hoare Logic for Quantum Programs},
   author    = {Ying, Mingsheng},
@@ -1176,6 +1186,7 @@ quantum algorithms, the Harrow-Hassidim-Lloyd algorithm and Shor's algorithm.}
   pages     = {19:1--19:49},
   doi       = {10.1145/2049706.2049708},
   abstract  = {Floyd--Hoare logic is a foundation of axiomatic semantics of classical programs, and it provides effective proof techniques for reasoning about correctness of classical programs. To offer similar techniques for quantum program verification and to build a logical foundation of programming methodology for quantum computers, we develop a full-fledged Floyd--Hoare logic for both partial and total correctness of quantum programs. It is proved that this logic is (relatively) complete by exploiting the power of weakest preconditions and weakest liberal preconditions for quantum programs.},
+  note      = {An early version is \cite{Ying2009a}},
   timestamp = {2021-04-18}
 }
 
